entity , dto 추가 및 login test

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,5 +15,6 @@
 <p sec:authorize="hasRole('USER')">[이 부분은 손님(USER)에게만 나타남]</p>
 <p sec:authorize="isAuthenticated()">[이 부분은 로그인한 사용자(isAuthenticated) 모두에게 나타남]<p>
 
+<a href="/joinForm">회원가입</a>
 </body>
 </html>
