--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -8,12 +8,10 @@
 <h1> join page</h1>
 <hr/>
 <form action="/join" method="post">
-  <input type="hidden" name="userType" placeholder="User" value="GUEST">
-  <input type="text" name="userId" placeholder="Username"><br/>
-  <input type="password" name="userPassword" placeholder="Password"><br/>
-  <input type="text" name="userEmail" placeholder="Email"><br/>
-  <input type="text" name="userNick" placeholder="Nick"><br/>
-  <input type="text" name="userName" placeholder="Name">
+  <input type="text" name="username" placeholder="Username"><br/>
+  <input type="password" name="password" placeholder="Password"><br/>
+  <input type="text" name="email" placeholder="Email"><br/>
+  <input type="text" name="nickname" placeholder="Nick"><br/>
   <button>join</button>
 </form>
 <a href="/joinForm">회원가입</a>
