--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -8,8 +8,8 @@
 <h1> login page</h1>
 <hr/>
 <form action="/login" method="post">
-    <input type="text" name="userId" placeholder="Username"><br/>
-    <input type="password" name="userPassword" placeholder="Password"><br/>
+    <input type="text" name="username" placeholder="Username"><br/>
+    <input type="password" name="password" placeholder="Password"><br/>
     <button>login</button>
 </form>
 <a href="/joinForm">회원가입</a>
