--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <body>
 <a href="test">Test Page</a>
 <a sec:authorize="hasRole('ADMIN')" href="adminOnly">adminOnly Page</a>
-<a sec:authorize="!isAuthenticated()" href="login">Login</a>
+<a sec:authorize="!isAuthenticated()" href="loginForm">Login</a>
 <a sec:authorize="isAuthenticated()" href="logout">Logout</a>
 <p sec:authorize="hasRole('ADMIN')">[이 부분은 운영자(ADMIN)에게만 나타남]</p>
 <p sec:authorize="hasRole('USER')">[이 부분은 손님(USER)에게만 나타남]</p>
