--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1> join page</h1>
 <hr/>
-<form action="/join" method="post">
+<form action="/join" method="POST">
   <input type="text" name="username" placeholder="Username"><br/>
   <input type="password" name="password" placeholder="Password"><br/>
   <input type="text" name="email" placeholder="Email"><br/>
